added many new files

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,12 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+E-816/*
+ei57xb/*
+PulseBlaster_LabVIEW_Extensions_2012_64bit/*
+*.png
+SITK/*
+spectra\ sense\ lv/*
+USB\ LabView\ (1)/*
+VELMEX\ step\ motor/*
+SMC\ 100/*
